- Fixed a regression that caused NPE when invoking the debug console - Moved all things related to logging from Launcher class to MuLogger class - Add MuLogger#Level enum for mucommander's logging levels